more tweaks to story and edit story page, fixed alignment on create story nav bar, styled buttons

--- a/public/stylesheets/new-story.css
+++ b/public/stylesheets/new-story.css
@@ -1,51 +1,52 @@
-label{
-    font-family: 'Playfair Display', serif;
+label {
+  font-family: "Playfair Display", serif;
 }
 
-form{
-    width: 80%;
+form {
+  width: 80%;
 }
 
-textarea{
-    font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
-    line-height: 1.5em;
-    border: 1px solid lightgray;
-
+textarea {
+  font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 1.5em;
+  border: 1px solid lightgray;
 }
 
-textarea:focus{
-    outline: none;
-    box-shadow: 0px 0px 5px lightgray;
+textarea:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px lightgray;
 }
 
-input::placeholder{
-    text-align: center;
+input::placeholder {
+  text-align: center;
 }
 
-input:focus{
-    box-shadow: 0px 2px 5px lightgray;
+input:focus {
+  box-shadow: 0px 2px 5px lightgray;
 }
 
-.buttons{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px;
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px;
 }
 
-.buttons > *{
-    border-radius: 20px;
-    color: black;
-    font-size: 16px;
-    font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
+.buttons > * {
+  border-radius: 20px;
+  color: black;
+  font-size: 16px;
+  font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-#submitStory{
-    background-color: black;
-    color: white;
-    padding: 5px;
+#submitStory {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 10px;
+  font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-#cancelStory:hover{
-    text-decoration: underline;
+#cancelStory:hover {
+  text-decoration: underline;
 }
